@@ -24,7 +24,13 @@ new classes are not documented yet, (however the methods are more
 consistent with each other now so you may be able to guess pretty
 good...)
 
+Updated filebrowsebutton.py and calendar.py with changes from their
+authors.  There is now a FileBrowseButtonWithhistory class (what a
+mouthful!) and wxCalendar has printing support.
 
+Added ActiveXWrapper to the library, and some good demos of it too.
+It works great for embedding a COM (a.k.a OCX, a.k.a Activex) control
+in a window and calling its methods.
 
 
 
